--- a/src/Banner/Details.css
+++ b/src/Banner/Details.css
@@ -13,3 +13,9 @@
 .Details-bio {
   padding-top: 1.25rem;
 }
+
+@media screen and (max-width: 540px) {
+  .Details-header {
+    flex-direction: column;
+  }
+}
